--- a/app/globals.css
+++ b/app/globals.css
@@ -70,7 +70,7 @@
 
 @layer utilities {
   .wrapper {
-    @apply max-w-7xl lg:mx-auto p-5 md:px-10 xl:px-0 w-full;
+    @apply max-w-7xl lg:mx-auto p-0 md:px-10 w-full;
   }
 
   .flex-center {
